@@ -1,5 +1,5 @@
 #ifndef lint
-static const char RCSid[] = "$Id: gensurf.c,v 2.24 2018/01/12 00:50:17 greg Exp $";
+static const char RCSid[] = "$Id: gensurf.c,v 2.25 2018/05/04 23:56:49 greg Exp $";
 #endif
 /*
  *  gensurf.c - program to generate functional surfaces
@@ -99,9 +99,15 @@ char  *argv[];
 	for (i = 8; i < argc; i++)
 		if (!strcmp(argv[i], "-e"))
 			scompile(argv[++i], NULL, 0);
-		else if (!strcmp(argv[i], "-f"))
-			fcompile(argv[++i]);
-		else if (!strcmp(argv[i], "-s"))
+		else if (!strcmp(argv[i], "-f")) {
+			char  *fpath = getpath(argv[++i], getrlibpath(), 0);
+			if (fpath == NULL) {
+				fprintf(stderr, "%s: cannot find file '%s'\n",
+						argv[0], argv[i]);
+				quit(1);
+			}
+			fcompile(fpath);
+		} else if (!strcmp(argv[i], "-s"))
 			smooth++;
 		else if (!strcmp(argv[i], "-o"))
 			objout++;
