@@ -1,5 +1,5 @@
 #ifndef lint
-static const char	RCSid[] = "$Id: genworm.c,v 2.9 2018/01/12 00:50:17 greg Exp $";
+static const char	RCSid[] = "$Id: genworm.c,v 2.10 2018/05/04 23:56:49 greg Exp $";
 #endif
 /*
  *  genworm.c - program to generate worms (strings with varying thickness).
@@ -17,6 +17,7 @@ static const char	RCSid[] = "$Id: genworm.c,v 2.9 2018/01/12 00:50:17 greg Exp $
 #include  <string.h>
 
 #include  "calcomp.h"
+#include  "rtio.h"
 #include  "resolu.h"
 #include  "rterror.h"
 #include  "fvect.h"
@@ -58,9 +59,15 @@ char  *argv[];
 	for (i = 8; i < argc; i++)
 		if (!strcmp(argv[i], "-e"))
 			scompile(argv[++i], NULL, 0);
-		else if (!strcmp(argv[i], "-f"))
-			fcompile(argv[++i]);
-		else
+		else if (!strcmp(argv[i], "-f")) {
+			char  *fpath = getpath(argv[++i], getrlibpath(), 0);
+			if (fpath == NULL) {
+				fprintf(stderr, "%s: cannot find file '%s'\n",
+						argv[0], argv[i]);
+				quit(1);
+			}
+			fcompile(fpath);
+		} else
 			goto userror;
 
 	sprintf(stmp, "%s(t)=%s;", XNAME, argv[3]);
